Добавлена модель Unknown Не содержит в себе ничего полезного - просто напоминание относительно правил нейминга. Также затронута домашняя страница.

--- a/RaspberryWebTerminal/Views/WebUI/Index.cshtml
+++ b/RaspberryWebTerminal/Views/WebUI/Index.cshtml
@@ -8,11 +8,15 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>@DateTime.Now</title>
-        <script src="~/WebUI/main.js"></script>
-    </head>
-    <body>
-        <div class="text-center">Web UI</div>
-    </body>
+<head>
+    <title>@DateTime.Now</title>
+</head>
+<body>
+<!-- <script src="~/WebUI/main.js"></script> 
+-->
+<script>
+    alert("aboba");
+</script>
+<div class="text-center">Web UI</div>
+</body>
 </html>
