Добавлена асинхронность ::ScriptsController GetGamepadScript -> Get(string fileName) метод переименован, унифицирован, теперь асинхронный.

--- a/RaspberryWebTerminal/Views/WebUI/Index.cshtml
+++ b/RaspberryWebTerminal/Views/WebUI/Index.cshtml
@@ -12,10 +12,13 @@
     <title>@DateTime.Now</title>
 </head>
 <body>
-<!-- <script src="~/WebUI/main.js"></script> 
--->
 <script type="text/javascript" src="/scripts/gamepad.js"></script>
 <style>
+  .full-screen
+  {
+    font-family: Consolas, sans-serif;
+    font-size: 12pt;
+  }
   .axes {
     padding: 1em;
   }
@@ -56,6 +59,6 @@
     opacity: 0.7;
   }
 </style>
-<h2 id="start">Press a button on your controller to start</h2>
+<h2 id="start" class="full-screen">Press a button on your controller to start</h2>
 </body>
 </html>
