Считывается кадр с вебки Но нужно добавить PPR, иначе я запарюсь обновлять это безобразие

--- a/RaspberryWebTerminal/Views/WebUI/Index.cshtml
+++ b/RaspberryWebTerminal/Views/WebUI/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using RaspberryWebTerminal
 @model RaspberryWebTerminal.Index
 
 @{
@@ -12,6 +13,7 @@
     <title>@DateTime.Now</title>
 </head>
 <body>
+<img src="/camera/" alt="@Startup.Camera.What">Aboba</img>
 <script type="text/javascript" src="/scripts/gamepad.js"></script>
 <style>
   .full-screen
